--- a/Dev/SEToolbox/SEToolbox/Views/ControlPlanet.xaml
+++ b/Dev/SEToolbox/SEToolbox/Views/ControlPlanet.xaml
@@ -1,9 +1,9 @@
 ﻿<UserControl x:Class="SEToolbox.Views.ControlPlanet"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:controls="clr-namespace:SEToolbox.Controls"
              xmlns:commands="clr-namespace:SEToolbox.Services"
              xmlns:converters="clr-namespace:SEToolbox.Converters"
@@ -12,7 +12,7 @@
              xmlns:lex="http://wpflocalizeextension.codeplex.com"
              lex:ResxLocalizationProvider.DefaultAssembly="SEToolbox"
              lex:ResxLocalizationProvider.DefaultDictionary="Resources"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300"
              commands:DialogService.IsRegisteredView="True">
     <UserControl.Resources>
